--- a/exercicios/ex022/fundo002.html
+++ b/exercicios/ex022/fundo002.html
@@ -6,7 +6,7 @@
     <title>Personalisaçao dos fundos</title>
     <style>
         body {
-            background-image: url(imagens/wallpaper001.jpg);
+            background-image: url(https://gustavoguanabara.github.io/html-css/imagens/mascote.png);
         }
     </style>
 </head>
