--- a/exercicios/ex022/fundo002.html
+++ b/exercicios/ex022/fundo002.html
@@ -6,11 +6,23 @@
     <title>Personalisaçao dos fundos</title>
     <style>
         body {
-            background-image: url(https://gustavoguanabara.github.io/html-css/imagens/mascote.png);
+            background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzsUoPcZyml55R3Ad57EnYio_ynKEVSojnaA&s);
+            background-size: 100px 100px;
+            background-repeat: no-repeat
+            /*
+             background-repeat:repeat-y 
+             Y- vertical
+
+              background-repeat;repeat-x
+              X- horizontal
+
+             background-repeat:no-repeat
+             apenas uma unica imagen
+            */
         }
     </style>
 </head>
 <body>
-    <h1>teste de aplicaçao de fundo</h1>
+    
 </body>
 </html>
