--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>imagen</title>
+    <title>Fundo fixo de tela</title>
 </head>
 <style>
     body {
         height: 100vh;
-        border-color: black;
+        /*border-color: black;
         background-image: url(imagens/wallpaper002.jpg);
         background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
+        background-attachment: fixed;*/
+
+
+        background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+        background-size: cover;
     }
     main {
       background-color: #ffffff;
-        width: 400px;
+        max-width: 400px;
         padding: 10px;
         margin: auto;
         border: 1px solid darkblue;
@@ -27,6 +32,9 @@
     <main>
         <h1>Teste de imagen de fundo</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod placeat, ex omnis animi excepturi id fugit debitis ipsam eum nesciunt eveniet numquam est amet sed distinctio ea. Dolor, culpa architecto?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, dignissimos? Ipsam dignissimos dolore temporibus distinctio, nemo iure voluptate vitae velit eaque? Temporibus odio sit dolor magnam sunt est enim repudiandae?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam aperiam nisi fugiat natus fugit quisquam blanditiis saepe veniam? Minus doloremque labore culpa dolorum inventore beatae laborum libero quidem, cum natus?</p>
+         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod placeat, ex omnis animi excepturi id fugit debitis ipsam eum nesciunt eveniet numquam est amet sed distinctio ea. Dolor, culpa architecto?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, dignissimos? Ipsam dignissimos dolore temporibus distinctio, nemo iure voluptate vitae velit eaque? Temporibus odio sit dolor magnam sunt est enim repudiandae?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam aperiam nisi fugiat natus fugit quisquam blanditiis saepe veniam? Minus doloremque labore culpa dolorum inventore beatae laborum libero quidem, cum natus?</p>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod placeat, ex omnis animi excepturi id fugit debitis ipsam eum nesciunt eveniet numquam est amet sed distinctio ea. Dolor, culpa architecto?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, dignissimos? Ipsam dignissimos dolore temporibus distinctio, nemo iure voluptate vitae velit eaque? Temporibus odio sit dolor magnam sunt est enim repudiandae?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam aperiam nisi fugiat natus fugit quisquam blanditiis saepe veniam? Minus doloremque labore culpa dolorum inventore beatae laborum libero quidem, cum natus?</p>
+           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod placeat, ex omnis animi excepturi id fugit debitis ipsam eum nesciunt eveniet numquam est amet sed distinctio ea. Dolor, culpa architecto?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, dignissimos? Ipsam dignissimos dolore temporibus distinctio, nemo iure voluptate vitae velit eaque? Temporibus odio sit dolor magnam sunt est enim repudiandae?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam aperiam nisi fugiat natus fugit quisquam blanditiis saepe veniam? Minus doloremque labore culpa dolorum inventore beatae laborum libero quidem, cum natus?</p>
     </main>
     
 </body>
