--- a/desafio/d014/index.html
+++ b/desafio/d014/index.html
@@ -15,10 +15,17 @@
             text-align: center;
              height: 400px;
              border-collapse: collapse;
+             background-color: #f2f2a6;
             }
 
              tr,td, th{
                 border: 1px solid black;
+                padding: 10px;
+             }
+             th {
+                background-color: #92d399;
+             }
+             caption {
                 padding: 10px;
              }
            
